Apply correct flexbox styling to `.pane > .item-views > *`
Markdown preview was overflowing because the min-height of flexbox
items is automatically set to min-content. Setting it to 0 ensures that
the item doesn't expand beyond its flex size. Moving this styling to
atom.css ensures that people don't have to work too hard to fit
their views into panes.

--- a/src/packages/markdown-preview/stylesheets/markdown-preview.css
+++ b/src/packages/markdown-preview/stylesheets/markdown-preview.css
@@ -3,9 +3,8 @@
   font-size: 14px;
   line-height: 1.6;
   background-color: #fff;
-  overflow: auto;
+  overflow: scroll;
   padding: 20px;
-  -webkit-flex: 1;
 }
 
 .markdown-preview pre,
@@ -40,10 +39,7 @@
 
 /* this code below was copied from https://github.com/assets/stylesheets/primer/components/markdown.css */
 /* we really need to get primer in here somehow. */
-.markdown-preview {
-  font-size: 14px;
-  line-height: 1.6;
-  overflow: hidden; }
+.markdown-preview {}
   .markdown-preview > *:first-child {
     margin-top: 0 !important; }
   .markdown-preview > *:last-child {
